--- a/StockTickerExtension/StockTickerExtension.csproj
+++ b/StockTickerExtension/StockTickerExtension.csproj
@@ -47,6 +47,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StockStatusBarUpdater.cs" />
     <Compile Include="StockTickerExtensionPackage.cs" />
     <Compile Include="StockToolWindow.cs" />
     <Compile Include="StockToolWindowCommand.cs" />
