增加一个Tool类用于聚拢通用计算接口。加上港股美股的展示。

--- a/StockTickerExtension/StockTickerExtension.csproj
+++ b/StockTickerExtension/StockTickerExtension.csproj
@@ -54,6 +54,7 @@
     <Compile Include="StockToolWindowControl.xaml.cs">
       <DependentUpon>StockToolWindowControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Tool.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="source.extension.vsixmanifest">
