增加一个配置文件管理类，用于在启动和退出的时候初始化界面的操作。优化代码

--- a/StockTickerExtension/StockTickerExtension.csproj
+++ b/StockTickerExtension/StockTickerExtension.csproj
@@ -55,6 +55,7 @@
       <DependentUpon>StockToolWindowControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="Tool.cs" />
+    <Compile Include="UserConfig.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="source.extension.vsixmanifest">
