--- a/StockTickerExtension/StockTickerExtension.csproj
+++ b/StockTickerExtension/StockTickerExtension.csproj
@@ -46,6 +46,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Logger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StockStatusBarUpdater.cs" />
     <Compile Include="StockTickerExtensionPackage.cs" />
